# C2Core

./: .gitignore  AGENT.md  CMakeLists.txt  README.md
beacon/: Beacon.cpp  Beacon.hpp  BeaconDns.cpp  BeaconDns.hpp  BeaconDnsLauncher.cpp  BeaconGithub.cpp  BeaconGithub.hpp  BeaconGithubLauncher.cpp  BeaconHttp.cpp  BeaconHttp.hpp  BeaconHttpLauncher.cpp  BeaconSmb.cpp  BeaconSmb.hpp  BeaconSmbLauncher.cpp  BeaconTcp.cpp  BeaconTcp.hpp  BeaconTcpLauncher.cpp  CMakeLists.txt  Config.hpp  SocksTunnelClient.hpp
beacon/tests/: CMakeLists.txt  testBeacon.cpp  testBeaconDns.cpp  testBeaconGithub.cpp  testBeaconHttp.cpp  testBeaconSmb.cpp  testBeaconTcp.cpp
listener/tests/: CMakeLists.txt  testListener.cpp  testListenerDns.cpp  testListenerGithub.cpp  testListenerHttp.cpp  testListenerSmb.cpp  testListenerTcp.cpp
modules/: CMakeLists.txt
modules/AssemblyExec/: AssemblyExec.cpp  AssemblyExec.hpp  CMakeLists.txt
modules/AssemblyExec/tests/: testOutputWriter.cpp  testsAssemblyExec.cpp
modules/Cat/: CMakeLists.txt  Cat.cpp  Cat.hpp
modules/Cat/tests/: testsCat.cpp
modules/ChangeDirectory/: CMakeLists.txt  ChangeDirectory.cpp  ChangeDirectory.hpp
modules/ChangeDirectory/tests/: testsChangeDirectory.cpp
modules/Chisel/: CMakeLists.txt  Chisel.cpp  Chisel.hpp
modules/Chisel/tests/: testsChisel.cpp
modules/CimExec/: CMakeLists.txt  CimExec.cpp  CimExec.hpp
modules/CimExec/tests/: testsCimExec.cpp
modules/CoffLoader/: CMakeLists.txt  CoffLoader.cpp  CoffLoader.hpp
modules/CoffLoader/tests/: testsCoffLoader.cpp
modules/DcomExec/: CMakeLists.txt  DcomExec.cpp  DcomExec.hpp
modules/DcomExec/tests/: testsDcomExec.cpp
modules/DotnetExec/: AssemblyManager.cpp  AssemblyManager.hpp  AssemblyStore.cpp  AssemblyStore.hpp  CMakeLists.txt  DotnetExec.cpp  DotnetExec.hpp  HostControl.cpp  HostMalloc.hpp  MemoryManager.cpp  MemoryManager.hpp
modules/DotnetExec/PowerShellRunner/: rdm.cs
modules/DotnetExec/tests/: project.rc  testsDotnetExec.cpp
modules/Download/: CMakeLists.txt  Download.cpp  Download.hpp
modules/Download/tests/: testsDownload.cpp
modules/EnumerateRdpSessions/: CMakeLists.txt  EnumerateRdpSessions.cpp  EnumerateRdpSessions.hpp
modules/EnumerateRdpSessions/tests/: testsEnumerateRdpSessions.cpp
modules/EnumerateShares/: CMakeLists.txt  EnumerateShares.cpp  EnumerateShares.hpp
modules/EnumerateShares/tests/: testsEnumerateShares.cpp
modules/Evasion/: CMakeLists.txt  Evasion.cpp  Evasion.hpp  structs.hpp
modules/Evasion/tests/: testsEvasion.cpp
modules/GetEnv/: CMakeLists.txt  GetEnv.cpp  GetEnv.hpp
modules/GetEnv/tests/: testsGetEnv.cpp
modules/Inject/: CMakeLists.txt  Inject.cpp  Inject.hpp
modules/Inject/tests/: testsInject.cpp
modules/IpConfig/: CMakeLists.txt  IpConfig.cpp  IpConfig.hpp
modules/IpConfig/tests/: testsIpConfig.cpp
modules/KerberosUseTicket/: CMakeLists.txt  KerberosUseTicket.cpp  KerberosUseTicket.hpp
modules/KerberosUseTicket/tests/: testsKerberosUseTicket.cpp
modules/KeyLogger/: CMakeLists.txt  KeyLogger.cpp  KeyLogger.hpp
modules/KeyLogger/tests/: testsKeyLogger.cpp
modules/KillProcess/: CMakeLists.txt  KillProcess.cpp  KillProcess.hpp
modules/KillProcess/tests/: testsKillProcess.cpp
modules/ListDirectory/: CMakeLists.txt  ListDirectory.cpp  ListDirectory.hpp
modules/ListDirectory/tests/: testsListDirectory.cpp
modules/ListProcesses/: CMakeLists.txt  ListProcesses.cpp  ListProcesses.hpp
modules/ListProcesses/tests/: testsListProcesses.cpp
modules/MakeToken/: CMakeLists.txt  MakeToken.cpp  MakeToken.hpp
modules/MakeToken/tests/: testsMakeToken.cpp
modules/MiniDump/: CMakeLists.txt  MiniDump.cpp  MiniDump.hpp
modules/MiniDump/tests/: testsMiniDump.cpp
modules/MkDir/: CMakeLists.txt  MkDir.cpp  MkDir.hpp
modules/MkDir/tests/: testsMkDir.cpp
modules/ModuleCmd/: C2Message.hpp  CMakeLists.txt  Common.hpp  CommonCommand.hpp  ModuleCmd.cpp  ModuleCmd.hpp  README.md  Tools.hpp  hwbp.cpp  hwbp.hpp  include.hpp  peb.cpp  peb.hpp  syscall.arm64.asm  syscall.cpp  syscall.hpp  syscall.x64.asm  syscall.x86.asm
modules/ModuleCmd/tests/: testsHwbp.cpp  testsModuleCmd.cpp  testsSyscall.cpp  testsTools.cpp
modules/ModuleTemplate/: CMakeLists.txt  ModuleTemplate.cpp  ModuleTemplate.hpp
modules/Netstat/: CMakeLists.txt  Netstat.cpp  Netstat.hpp
modules/Powershell/: CMakeLists.txt  Powershell.cpp  Powershell.hpp
modules/PrintWorkingDirectory/: CMakeLists.txt  PrintWorkingDirectory.cpp  PrintWorkingDirectory.hpp
modules/PsExec/: CMakeLists.txt  PsExec.cpp  PsExec.hpp
modules/PwSh/: AssemblyManager.cpp  AssemblyStore.cpp  AssemblyStore.hpp  CMakeLists.txt  HostControl.cpp  HostControl.hpp  HostMalloc.cpp  HostMalloc.hpp  MemoryManager.cpp  MemoryManager.hpp  PwSh.cpp  PwSh.hpp
modules/PwSh/tests/: test.ps1  (+1 more)
modules/RawWinRm/: CMakeLists.txt  RawWinRm.cpp  RawWinRm.hpp
modules/Registry/: CMakeLists.txt  Registry.cpp  Registry.hpp
modules/Remove/: CMakeLists.txt  Remove.cpp  Remove.hpp
modules/Rev2self/: CMakeLists.txt  Rev2self.cpp  Rev2self.hpp
modules/ReversePortForward/: CMakeLists.txt  ReversePortForward.cpp  ReversePortForward.hpp
modules/Run/: CMakeLists.txt  Run.cpp  Run.hpp
modules/ScreenShot/: CMakeLists.txt  HandleGuards.h  ScreenShooter.cpp  ScreenShooter.h  ScreenShot.cpp  ScreenShot.hpp
modules/Script/: CMakeLists.txt  Script.cpp  Script.hpp
modules/Shell/: CMakeLists.txt  Shell.cpp  Shell.hpp
modules/SmbExec/: CMakeLists.txt  SmbExec.cpp  SmbExec.hpp
modules/SpawnAs/: CMakeLists.txt  SpawnAs.cpp  SpawnAs.hpp
modules/SshExec/: CMakeLists.txt  SshExec.cpp  SshExec.hpp
modules/StealToken/: CMakeLists.txt  StealToken.cpp  StealToken.hpp
modules/TaskScheduler/: CMakeLists.txt  TaskScheduler.cpp  TaskScheduler.hpp
modules/Tree/: CMakeLists.txt  Tree.cpp  Tree.hpp
modules/Upload/: CMakeLists.txt  Upload.cpp  Upload.hpp
modules/Whoami/: CMakeLists.txt  Whoami.cpp  Whoami.hpp
modules/WinRM/: CMakeLists.txt  WinRM.cpp  WinRM.hpp
modules/WmiExec/: CMakeLists.txt  WmiExec.cpp  WmiExec.hpp
modules/cat/: Cat.cpp
modules/tests/: TestHelpers.hpp
(+51 files in other folders)
