set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(C2CORE_BUILD_TESTS)
    enable_testing()
endif()

include_directories(ModuleCmd)

add_subdirectory(ModuleCmd)
add_subdirectory(AssemblyExec)
add_subdirectory(ChangeDirectory)
add_subdirectory(Chisel)
add_subdirectory(CoffLoader)
add_subdirectory(Download)
add_subdirectory(Evasion)
add_subdirectory(Inject)
add_subdirectory(KerberosUseTicket)
add_subdirectory(ListDirectory)
add_subdirectory(ListProcesses)
add_subdirectory(MakeToken)
add_subdirectory(Powershell)
add_subdirectory(PrintWorkingDirectory)
add_subdirectory(PsExec)
add_subdirectory(Rev2self)
add_subdirectory(Run)
add_subdirectory(Script)
add_subdirectory(SpawnAs)
add_subdirectory(StealToken)
add_subdirectory(Upload)
add_subdirectory(Cat)
add_subdirectory(MkDir)
add_subdirectory(Remove)
add_subdirectory(KillProcess)
add_subdirectory(Tree)
add_subdirectory(WmiExec)
add_subdirectory(TaskScheduler)
add_subdirectory(WinRM)
add_subdirectory(DcomExec)
add_subdirectory(CimExec)
add_subdirectory(KeyLogger)
add_subdirectory(ScreenShot)
add_subdirectory(MiniDump)
add_subdirectory(DotnetExec)
add_subdirectory(PwSh)
add_subdirectory(Shell)
add_subdirectory(GetEnv)
add_subdirectory(Whoami)
add_subdirectory(Netstat)
add_subdirectory(IpConfig)
add_subdirectory(EnumerateShares)
